# agentdt

./: .env  .gitignore  .pre-commit.yaml  README.md  installer_script.iss  pyproject.toml
app/: logger_config.py  main.py  project_structure.text  requirements.txt  vectordb.py
app/config/: config.py  logger_config.py
app/core/: agent.py  chat_manager.py  prompts.py  state.py  tools.py
app/db/: cuda_is_avail.py  embedding_factory.py  vectordb.py
app/db/tmp/chemistry_collection/collection/chemistry_collection/: storage.sqlite
app/presenters/: app_model.py  chat_presenter.py  main_presenter.py
app/ui/: chat_display.py  input_field.py  login_page.py  sidebar.py
app/utils/: icon_path.py  long_term_mem.py  model_context_window.py  summarization_chain.py  text_cleaner.py
db/collections/chemistry_collection/: meta.json
docs/: description.md
tests/: conftest.py
tests/agent_tests/: conftest.py  test_chemistry_functional.py  test_chemistry_safety.py
tests/agent_tests/datasets/: chemistry_questions.csv
tests/experiments/: logger.py  main_exper.py  rate_limiter.py  result_saver.py  scorer.py  viz.py
tests/experiments/questions/: questions_exper.json
tests/experiments/var_comparison/: baseline.py  full_agent.py  rag.py  search.py
tests/unit_tests/: test_chat_manager.py  test_tools.py  test_vectordb.py
tests/unit_tests/core/: test_agent.py  test_graph_flow.py  test_state.py
tests/unit_tests/db/: test_embedding_factory.py  test_vectordb_extra.py
tests/unit_tests/presenters/: conftest.py  test_app_model.py  test_chat_presenter.py  test_main_presenter.py
tests/unit_tests/utils/: test_icon_path.py  test_long_term_mem.py  test_model_context_window.py  test_summarization_chain.py  test_text_cleaner.py
