[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chembot"
version = "0.1.0"
description = "AI Agent for Chemical Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet==0.82.2",
    "python-dotenv==0.21.0",
    "langchain==1.2.9",
    "langchain-huggingface==1.2.0",
    "langchain-openai==1.1.7",
    "langchain-qdrant==1.1.0",
    "langchain-community==0.4.1",
    "langchain-pymupdf4llm==0.5.0",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.0.8",
    "langgraph-prebuilt==1.0.8",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-sqlite==3.0.3",
    "sentence-transformers==5.2.2",
    "aiosqlite==0.22.1",
    "python-json-logger==4.0.0",
    "arxiv==2.4.0",
    "duckduckgo_search==8.1.1",
    "ddgs==9.11.3"
]

[project.optional-dependencies]
observability = [
    "arize-phoenix==13.6.0",
    "arize-phoenix-otel==0.14.0",
    "openinference-instrumentation-langchain==0.1.60"
]
dev = [
    "pytest==9.0.2",
    "pytest-mock==3.15.1",
    "pytest-asyncio==1.3.0",
    "ruff>=0.3.0",
    "pre-commit>=4.5.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88